--- a/atkm/angular.json
+++ b/atkm/angular.json
@@ -36,7 +36,7 @@
                 "output": "/assets/"
               }
             ],
-            "styles": ["@angular/material/prebuilt-themes/azure-blue.css", "src/styles.scss"],
+            "styles": ["@angular/material/prebuilt-themes/azure-blue.css", "src/styles.scss", "src/assets/styles/atk.styles.css"],
             "scripts": []
           },
           "configurations": {
