feat: adaptation to the ang-20 framework

--- a/atkm/tsconfig.json
+++ b/atkm/tsconfig.json
@@ -22,7 +22,10 @@
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": false,
+    "strictPropertyInitialization": false,
+    "strictInputAccessModifiers": false,
+    "strictDomEventTypes": false,
+    "strictOutputEventTypes": false
   }
 }
