--- a/atkm/package.json
+++ b/atkm/package.json
@@ -4,8 +4,8 @@
   "description": "Frontend Angular pour ATK AI",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
-    "start:dev": "ng serve --configuration development --host 0.0.0.0",
+    "start": "ng serve --host 0.0.0.0 --port 4200 --poll 1000 --watch",
+    "start:dev": "ng serve --configuration development --host 0.0.0.0 --port 4200 --poll 1000 --watch",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
