--- a/atkm/angular.json
+++ b/atkm/angular.json
@@ -7,7 +7,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "atk-ai": {
+    "atkm": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/atk-ai",
+            "outputPath": "dist/atkm",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "atk-ai:build:production"
+              "buildTarget": "atkm:build:production"
             },
             "development": {
-              "buildTarget": "atk-ai:build:development"
+              "buildTarget": "atkm:build:development"
             }
           },
           "defaultConfiguration": "development",
