--- a/atkm_back/public/.htaccess
+++ b/atkm_back/public/.htaccess
@@ -1,57 +1,37 @@
-# .htaccess file for public directory of Atomeek DataMatrix Backend API
-# This file is used to configure URL rewriting, CORS, security headers, and caching.
-# Ensure that the Apache mod_rewrite module is enabled
-# and that AllowOverride is set to All in your Apache configuration.
-
 RewriteEngine On
 
-# Remove PHP extension from URLs (clean URLs)
+# Handle Angular routes (if serving frontend from same domain)
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.php [NC,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/api/
 
-# Handle OPTIONS requests for CORS
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
+# Redirect all API requests to index.php
+RewriteCond %{REQUEST_URI} ^/api/
+RewriteRule ^(.*)$ index.php [QSA,L]
 
-# CORS headers for API
-Header always set Access-Control-Allow-Origin "*"
-Header always set Access-Control-Max-Age "1000"
-Header always set Access-Control-Allow-Headers "X-Requested-With, Content-Type, Origin, Authorization, Accept, SecurityToken, Accept-Encoding"
-Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+# Redirect health check to index.php
+RewriteRule ^health$ index.php [QSA,L]
 
 # Security headers
-Header always set X-Content-Type-Options nosniff
-Header always set X-Frame-Options DENY
-Header always set X-XSS-Protection "1; mode=block"
-Header always set Referrer-Policy "strict-origin-when-cross-origin"
+<IfModule mod_headers.c>
+    Header always set X-Content-Type-Options nosniff
+    Header always set X-Frame-Options DENY
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
 
-# Cache for static assets
-
-    ExpiresActive On
-    ExpiresByType text/css "access plus 1 year"
-    ExpiresByType application/javascript "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    ExpiresByType image/jpg "access plus 1 year"
-    ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/svg+xml "access plus 1 year"
-
-
-# Gzip compression
-
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/rss+xml
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/x-javascript
-    AddOutputFilterByType DEFLATE application/json
-
-
-# Block sensitive files
-
+# Prevent access to sensitive files
+<Files ".env">
     Order allow,deny
     Deny from all
+</Files>
+
+<Files "composer.json">
+    Order allow,deny
+    Deny from all
+</Files>
+
+<Files "composer.lock">
+    Order allow,deny
+    Deny from all
+</Files>
