Enhance Dockerfile and Angular components for improved development experience
- Updated Dockerfile to run Angular in development mode with appropriate configurations.
- Added routes for IBKR and Binance components in app.routes.ts.
- Refactored LandingComponent by removing unused styles and ensuring proper imports.
- Changed main header title in content-main.component.html to "ATK Dashboard".
- Cleaned up content-main.component.ts by adding RouterOutlet to imports.

--- a/atkm/Dockerfile
+++ b/atkm/Dockerfile
@@ -16,5 +16,12 @@ COPY . .
 # Expose development port
 EXPOSE 4200
 
+# Variables utiles pour Docker + Angular CLI
+ENV CHOKIDAR_USEPOLLING=1
+ENV NG_CLI_ANALYTICS=0
+
+# Lancer Angular en mode dev, détectable par Angular DevTools
+CMD ["npx","ng","serve","--configuration","development","--host","0.0.0.0","--port","4200"]
+
 # Start development server
-CMD ["npm", "run", "start:dev"]
+# CMD ["npm", "run", "start:dev"]
