--- a/atkm/tsconfig.json
+++ b/atkm/tsconfig.json
@@ -21,6 +21,8 @@
       "@app/*": ["src/app/*"],
       "@core/*": ["src/app/core/*"],
       "@shared/*": ["src/app/shared/*"],
+      "@directives/*": ["src/app/shared/directives/*"],
+      "@pipes/*": ["src/app/shared/pipes/*"],
       "@features/*": ["src/app/features/*"],
       "@assets/*": ["src/assets/*"]
     }
