✅ feature: atk-bash (2025.09.15.170930) ------------------------------------------------ - some refact to atk-tools - some refact to atk-bash - some refact to navbar-brand - modify landing-data.json ------------------------------------------------

--- a/atkm/tsconfig.json
+++ b/atkm/tsconfig.json
@@ -25,7 +25,8 @@
       "@pipes/*": ["src/app/shared/pipes/*"],
       "@features/*": ["src/app/features/*"],
       "@assets/*": ["src/assets/*"]
-    }
+    },
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
