☑️ feature: ConsoleLogger (2025.09.16.194828) ------------------------------------------------ - refact console-logger.tool.ts - refact console-logger.config.colors.json - refact console-logger.config.symbols.json
------------------------------------------------

--- a/atkm/src/assets/config/tools-configs/console-logger.config.colors.json
+++ b/atkm/src/assets/config/tools-configs/console-logger.config.colors.json
@@ -1,62 +1,71 @@
 {
-  "E81123": "E81123",
-  "8B0000": "8B0000",
-  "DC143C": "DC143C",
-  "FA8072": "FA8072",
-  "F08080": "F08080",
-  "FFC0CB": "FFC0CB",
-  "FF69B4": "FF69B4",
-  "FF1493": "FF1493",
-  "FFFF30": "FFFF30",
-  "FFD700": "FFD700",
-  "FAFAD2": "FAFAD2",
-  "FFA500": "FFA500",
-  "FF8C00": "FF8C00",
-  "FF7F50": "FF7F50",
-  "FF6347": "FF6347",
-  "FFDAB9": "FFDAB9",
-  "16c60c": "16c60c",
-  "32CD32": "32CD32",
-  "228B22": "228B22",
-  "006400": "006400",
-  "98FB98": "98FB98",
-  "90EE90": "90EE90",
-  "3CB371": "3CB371",
-  "00FFFF": "00FFFF",
-  "00CED1": "00CED1",
-  "008080": "008080",
-  "0078D7": "0078D7",
-  "4169E1": "4169E1",
-  "000080": "000080",
-  "1E90FF": "1E90FF",
-  "87CEEB": "87CEEB",
-  "00BFFF": "00BFFF",
-  "B0E0E6": "B0E0E6",
-  "FF00FF": "FF00FF",
-  "800080": "800080",
-  "BA55D3": "BA55D3",
-  "9932CC": "9932CC",
-  "4B0082": "4B0082",
-  "EE82EE": "EE82EE",
-  "DDA0DD": "DDA0DD",
-  "E6E6FA": "E6E6FA",
-  "FFFFFF": "FFFFFF",
-  "D3D3D3": "D3D3D3",
-  "808080": "808080",
-  "A9A9A9": "A9A9A9",
-  "000000": "000000",
-  "A52A2A": "A52A2A",
-  "D2691E": "D2691E",
-  "A0522D": "A0522D",
-  "8B4513": "8B4513",
-  "F4A460": "F4A460",
-  "DAA520": "DAA520",
-  "F5FFFA": "F5FFFA",
-  "F0FFF0": "F0FFF0",
-  "F0F8FF": "F0F8FF",
-  "FFF5EE": "FFF5EE",
-  "FAF0E6": "FAF0E6",
-  "F5F5DC": "F5F5DC",
-  "E0FFFF": "E0FFFF",
-  "EEE8AA": "EEE8AA"
+  "F0F8FF": { "hex": "#F0F8FF", "description": "Alice blue" },
+  "FAEBD7": { "hex": "#FAEBD7", "description": "Antique white" },
+  "F5F5DC": { "hex": "#F5F5DC", "description": "Beige" },
+  "A52A2A": { "hex": "#A52A2A", "description": "Brown" },
+  "16c60c": { "hex": "#16c60c", "description": "Bright green" },
+  "E81123": { "hex": "#E81123", "description": "Bright red" },
+  "FFFF30": { "hex": "#FFFF30", "description": "Bright yellow" },
+  "000000": { "hex": "#000000", "description": "Black" },
+  "00FFFF": { "hex": "#00FFFF", "description": "Cyan" },
+  "FF7F50": { "hex": "#FF7F50", "description": "Coral" },
+  "DC143C": { "hex": "#DC143C", "description": "Crimson red" },
+  "00CED1": { "hex": "#00CED1", "description": "Dark cyan" },
+  "006400": { "hex": "#006400", "description": "Dark green" },
+  "A9A9A9": { "hex": "#A9A9A9", "description": "Dark gray" },
+  "8B0000": { "hex": "#8B0000", "description": "Dark red" },
+  "FF8C00": { "hex": "#FF8C00", "description": "Dark orange" },
+  "9932CC": { "hex": "#9932CC", "description": "Dark orchid" },
+  "FF1493": { "hex": "#FF1493", "description": "Deep pink" },
+  "00BFFF": { "hex": "#00BFFF", "description": "Deep sky blue" },
+  "FFD700": { "hex": "#FFD700", "description": "Gold" },
+  "DAA520": { "hex": "#DAA520", "description": "Goldenrod" },
+  "B22222": { "hex": "#B22222", "description": "Firebrick" },
+  "228B22": { "hex": "#228B22", "description": "Forest green" },
+  "ADFF2F": { "hex": "#ADFF2F", "description": "Green yellow" },
+  "808080": { "hex": "#808080", "description": "Gray" },
+  "FF69B4": { "hex": "#FF69B4", "description": "Hot pink" },
+  "CD5C5C": { "hex": "#CD5C5C", "description": "Indian red" },
+  "4B0082": { "hex": "#4B0082", "description": "Indigo" },
+  "E6E6FA": { "hex": "#E6E6FA", "description": "Lavender" },
+  "D3D3D3": { "hex": "#D3D3D3", "description": "Light gray" },
+  "90EE90": { "hex": "#90EE90", "description": "Light green" },
+  "F08080": { "hex": "#F08080", "description": "Light coral" },
+  "E0FFFF": { "hex": "#E0FFFF", "description": "Light cyan" },
+  "FAFAD2": { "hex": "#FAFAD2", "description": "Light goldenrod" },
+  "FFB6C1": { "hex": "#FFB6C1", "description": "Light pink" },
+  "32CD32": { "hex": "#32CD32", "description": "Lime green" },
+  "FAF0E6": { "hex": "#FAF0E6", "description": "Linen" },
+  "FF00FF": { "hex": "#FF00FF", "description": "Magenta" },
+  "BA55D3": { "hex": "#BA55D3", "description": "Medium orchid" },
+  "3CB371": { "hex": "#3CB371", "description": "Medium sea green" },
+  "C71585": { "hex": "#C71585", "description": "Medium violet red" },
+  "F5FFFA": { "hex": "#F5FFFA", "description": "Mint cream" },
+  "FFE4B5": { "hex": "#FFE4B5", "description": "Moccasin" },
+  "000080": { "hex": "#000080", "description": "Navy" },
+  "808000": { "hex": "#808000", "description": "Olive" },
+  "FFA500": { "hex": "#FFA500", "description": "Orange" },
+  "FFEFD5": { "hex": "#FFEFD5", "description": "Papaya whip" },
+  "FFDAB9": { "hex": "#FFDAB9", "description": "Peach puff" },
+  "DDA0DD": { "hex": "#DDA0DD", "description": "Plum" },
+  "B0E0E6": { "hex": "#B0E0E6", "description": "Powder blue" },
+  "800080": { "hex": "#800080", "description": "Purple" },
+  "4169E1": { "hex": "#4169E1", "description": "Royal blue" },
+  "87CEEB": { "hex": "#87CEEB", "description": "Sky blue" },
+  "8B4513": { "hex": "#8B4513", "description": "Saddle brown" },
+  "F4A460": { "hex": "#F4A460", "description": "Sandy brown" },
+  "FA8072": { "hex": "#FA8072", "description": "Salmon" },
+  "FFF5EE": { "hex": "#FFF5EE", "description": "Seashell" },
+  "2E8B57": { "hex": "#2E8B57", "description": "Sea green" },
+  "A0522D": { "hex": "#A0522D", "description": "Sienna" },
+  "C0C0C0": { "hex": "#C0C0C0", "description": "Silver" },
+  "4682B4": { "hex": "#4682B4", "description": "Steel blue" },
+  "D2B48C": { "hex": "#D2B48C", "description": "Tan" },
+  "D8BFD8": { "hex": "#D8BFD8", "description": "Thistle" },
+  "FF6347": { "hex": "#FF6347", "description": "Tomato" },
+  "40E0D0": { "hex": "#40E0D0", "description": "Turquoise" },
+  "EE82EE": { "hex": "#EE82EE", "description": "Violet" },
+  "F5DEB3": { "hex": "#F5DEB3", "description": "Wheat" },
+  "FFFFFF": { "hex": "#FFFFFF", "description": "White" },
+  "FFFF00": { "hex": "#FFFF00", "description": "Yellow" }
 }
