--- a/atkm/src/assets/config/tools-configs/console-logger.config.symbols.json
+++ b/atkm/src/assets/config/tools-configs/console-logger.config.symbols.json
@@ -1,95 +1,96 @@
 {
-  "leftArrow": "\u2190",
-  "upArrow": "\u2191",
-  "rightArrow": "\u2192",
-  "downArrow": "\u2193",
-  "leftRightArrow": "\u2194",
-  "upDownArrow": "\u2195",
-  "longLeftArrow": "\u27F5",
-  "longRightArrow": "\u27F6",
-  "longLeftRightArrow": "\u27F7",
-  "curvedRightArrow": "\u21AA",
-  "curvedLeftArrow": "\u21A9",
-  "doubleRightArrow": "\u21D2",
-  "doubleLeftArrow": "\u21D0",
-  "filledStar": "\u2605",
-  "emptyStar": "\u2606",
-  "smallBlackStar": "\u2726",
-  "smallWhiteStar": "\u2727",
-  "shootingStar": "\u1F320",
-  "sparkles": "\u2728",
-  "plusMinus": "\u00B1",
-  "multiplication": "\u00D7",
-  "division": "\u00F7",
-  "squareRoot": "\u221A",
-  "cubeRoot": "\u221B",
-  "fourthRoot": "\u221C",
-  "infinity": "\u221E",
-  "notEqual": "\u2260",
-  "lessThanOrEqual": "\u2264",
-  "greaterThanOrEqual": "\u2265",
-  "proportionalTo": "\u221D",
-  "approximatelyEqual": "\u2248",
-  "integral": "\u222B",
-  "summation": "\u2211",
-  "pi": "\u03C0",
-  "bullet": "\u2022",
-  "bulletPoint": "\u2023",
-  "smallCircle": "\u25E6",
-  "triangleBullet": "\u2023",
-  "diamondBullet": "\u2764",
-  "blackSquare": "\u25A0",
-  "whiteSquare": "\u25A1",
-  "blackCircle": "\u25CF",
-  "whiteCircle": "\u25CB",
-  "blackTriangle": "\u25B2",
-  "whiteTriangle": "\u25B3",
-  "blackDiamond": "\u25C6",
-  "whiteDiamond": "\u25C7",
-  "wideRightArrow": "\u2794",
-  "thinRightArrow": "\u279C",
-  "blackRightArrow": "\u27A4",
-  "checkbox": "\u2611",
-  "warning": "\u26A0",
-  "redCross": "\u274C",
-  "check": "\u2714",
-  "cross": "\u2716",
-  "envelope": "\u2709",
-  "telephone": "\u260E",
-  "sun": "\u2600",
-  "cloud": "\u2601",
-  "umbrella": "\u2602",
-  "snowman": "\u2603",
-  "thunderstorm": "\u26C8",
-  "rain": "\u1F327",
-  "snowflake": "\u2744",
-  "crescentMoon": "\u1F319",
-  "heart": "\u2665",
-  "spade": "\u2660",
-  "club": "\u2663",
-  "diamond": "\u2666",
-  "king": "\u265A",
-  "queen": "\u265B",
-  "rook": "\u265C",
-  "bishop": "\u265D",
-  "knight": "\u265E",
-  "pawn": "\u265F",
-  "skullAndCrossbones": "\u2620",
-  "yinYang": "\u262F",
-  "anchor": "\u2693",
-  "scissors": "\u2702",
-  "pencil": "\u270F",
-  "hourglass": "\u231B",
-  "hourglassEmpty": "\u23F3",
-  "recycle": "\u267B",
-  "radioactive": "\u2622",
-  "biohazard": "\u2623",
-  "copyright": "\u00A9",
-  "trademark": "\u2122",
-  "registered": "\u00AE",
-  "euro": "\u20AC",
-  "dollar": "$",
-  "pound": "\u00A3",
-  "yen": "\u00A5",
-  "section": "\u00A7"
+  "anchor": { "char": "⚓", "description": "Anchor" },
+  "approximatelyEqual": { "char": "≈", "description": "Approximately equal" },
+  "biohazard": { "char": "☣", "description": "Biohazard" },
+  "bishop": { "char": "♝", "description": "Bishop" },
+  "blackCircle": { "char": "●", "description": "Black circle" },
+  "blackDiamond": { "char": "◆", "description": "Black diamond" },
+  "blackRightArrow": { "char": "➤", "description": "Black right arrow" },
+  "blackSquare": { "char": "■", "description": "Black square" },
+  "blackTriangle": { "char": "▲", "description": "Black triangle" },
+  "bullet": { "char": "•", "description": "Bullet" },
+  "bulletPoint": { "char": "‣", "description": "Bullet point" },
+  "check": { "char": "✔", "description": "Check mark" },
+  "checkbox": { "char": "☑", "description": "Checkbox" },
+  "club": { "char": "♣", "description": "Club" },
+  "copyright": { "char": "©", "description": "Copyright" },
+  "crescentMoon": { "char": "🌙", "description": "Crescent moon" },
+  "cross": { "char": "✖", "description": "Cross mark" },
+  "cubeRoot": { "char": "∛", "description": "Cube root" },
+  "curvedLeftArrow": { "char": "↩", "description": "Curved left arrow" },
+  "curvedRightArrow": { "char": "↪", "description": "Curved right arrow" },
+  "diamond": { "char": "♦", "description": "Diamond" },
+  "diamondBullet": { "char": "❥", "description": "Diamond bullet" },
+  "division": { "char": "÷", "description": "Division sign" },
+  "dollar": { "char": "$", "description": "Dollar" },
+  "doubleLeftArrow": { "char": "⇐", "description": "Double left arrow" },
+  "doubleRightArrow": { "char": "⇒", "description": "Double right arrow" },
+  "downArrow": { "char": "↓", "description": "Down arrow" },
+  "emptyStar": { "char": "☆", "description": "Empty star" },
+  "envelope": { "char": "✉", "description": "Envelope" },
+  "equal": { "char": "=", "description": "Equal sign" },
+  "euro": { "char": "€", "description": "Euro" },
+  "filledStar": { "char": "★", "description": "Filled star" },
+  "fourthRoot": { "char": "∜", "description": "Fourth root" },
+  "greaterThanOrEqual": { "char": "≥", "description": "Greater than or equal" },
+  "heart": { "char": "♥", "description": "Heart" },
+  "hourglass": { "char": "⌛", "description": "Hourglass" },
+  "hourglassEmpty": { "char": "⏳", "description": "Hourglass empty" },
+  "infinity": { "char": "∞", "description": "Infinity" },
+  "integral": { "char": "∫", "description": "Integral" },
+  "king": { "char": "♚", "description": "King" },
+  "knight": { "char": "♞", "description": "Knight" },
+  "lessThanOrEqual": { "char": "≤", "description": "Less than or equal" },
+  "leftArrow": { "char": "←", "description": "Left arrow" },
+  "leftRightArrow": { "char": "↔", "description": "Left-right arrow" },
+  "longLeftArrow": { "char": "⟵", "description": "Long left arrow" },
+  "longLeftRightArrow": { "char": "⟷", "description": "Long left-right arrow" },
+  "longRightArrow": { "char": "⟶", "description": "Long right arrow" },
+  "multiplication": { "char": "×", "description": "Multiplication sign" },
+  "notEqual": { "char": "≠", "description": "Not equal" },
+  "pound": { "char": "£", "description": "Pound" },
+  "pawn": { "char": "♟", "description": "Pawn" },
+  "pencil": { "char": "✏", "description": "Pencil" },
+  "pi": { "char": "π", "description": "Pi" },
+  "plusMinus": { "char": "±", "description": "Plus minus" },
+  "proportionalTo": { "char": "∝", "description": "Proportional to" },
+  "queen": { "char": "♛", "description": "Queen" },
+  "radioactive": { "char": "☢", "description": "Radioactive" },
+  "rain": { "char": "🌧", "description": "Rain" },
+  "recycle": { "char": "♻", "description": "Recycle" },
+  "redCross": { "char": "❌", "description": "Red cross" },
+  "registered": { "char": "®", "description": "Registered" },
+  "rightArrow": { "char": "→", "description": "Right arrow" },
+  "rook": { "char": "♜", "description": "Rook" },
+  "scissors": { "char": "✂", "description": "Scissors" },
+  "section": { "char": "§", "description": "Section" },
+  "shootingStar": { "char": "🌠", "description": "Shooting star" },
+  "skullAndCrossbones": { "char": "☠", "description": "Skull and crossbones" },
+  "smallBlackStar": { "char": "✦", "description": "Small black star" },
+  "smallCircle": { "char": "◦", "description": "Small circle" },
+  "smallWhiteStar": { "char": "✧", "description": "Small white star" },
+  "snowflake": { "char": "❄", "description": "Snowflake" },
+  "snowman": { "char": "☃", "description": "Snowman" },
+  "spade": { "char": "♠", "description": "Spade" },
+  "sparkles": { "char": "✨", "description": "Sparkles" },
+  "squareRoot": { "char": "√", "description": "Square root" },
+  "star": { "char": "★", "description": "Star (filled)" },
+  "sun": { "char": "☀", "description": "Sun" },
+  "summation": { "char": "∑", "description": "Summation" },
+  "telephone": { "char": "☎", "description": "Telephone" },
+  "thinRightArrow": { "char": "➜", "description": "Thin right arrow" },
+  "thunderstorm": { "char": "⛈", "description": "Thunderstorm" },
+  "trademark": { "char": "™", "description": "Trademark" },
+  "triangleBullet": { "char": "‣", "description": "Triangle bullet" },
+  "upArrow": { "char": "↑", "description": "Up arrow" },
+  "upDownArrow": { "char": "↕", "description": "Up-down arrow" },
+  "umbrella": { "char": "☂", "description": "Umbrella" },
+  "warning": { "char": "⚠", "description": "Warning" },
+  "whiteCircle": { "char": "○", "description": "White circle" },
+  "whiteDiamond": { "char": "◇", "description": "White diamond" },
+  "whiteSquare": { "char": "□", "description": "White square" },
+  "whiteTriangle": { "char": "△", "description": "White triangle" },
+  "wideRightArrow": { "char": "➔", "description": "Wide right arrow" },
+  "yinYang": { "char": "☯", "description": "Yin yang" },
+  "yen": { "char": "¥", "description": "Yen" }
 }
