🅰️ feature: atk-bash (2025.09.17.023801) ------------------------------------------------ refact atk-bash-template.component (mainly) ------------------------------------------------

--- a/atkm/src/assets/config/bash-configs/bash.config.binance.json
+++ b/atkm/src/assets/config/bash-configs/bash.config.binance.json
@@ -1,6 +1,6 @@
 {
   "id": "binance-debug-json",
-  "title": "Binance API Debug Terminal - JSON Config",
+  "title": "bbb Binance API Debug Terminal - JSON Config",
   "subtitle": "Configuration JSON pour tests et développements futurs",
   "defaultEndpoint": "account",
   "terminal": {
