⚙️fix > atk-api >reconnect table & sidebarfields (2) ———————————————————

--- a/atkm/src/app/core/tools/console-logger.config.symbols.json
+++ b/atkm/src/app/core/tools/console-logger.config.symbols.json
@@ -1,9 +1,58 @@
 {
+  "airplane": { "char": "✈", "description": "Airplane" },
   "anchor": { "char": "⚓", "description": "Anchor" },
-  "approximatelyEqual": { "char": "≈", "description": "Approximately equal" },
+  "atom": { "char": "⚛", "description": "Atom symbol" },
   "biohazard": { "char": "☣", "description": "Biohazard" },
-  "bishop": { "char": "♝", "description": "Bishop" },
   "blackCircle": { "char": "●", "description": "Black circle" },
+  "blackStar": { "char": "★", "description": "Black star" },
+  "checkMark": { "char": "✔", "description": "Check mark" },
+  "cloud": { "char": "☁", "description": "Cloud" },
+  "club": { "char": "♣", "description": "Club suit" },
+  "coffee": { "char": "☕", "description": "Hot beverage / Coffee cup" },
+  "cross": { "char": "✝", "description": "Christian cross" },
+  "crescentMoon": { "char": "☾", "description": "Crescent moon" },
+  "degree": { "char": "°", "description": "Degree sign" },
+  "diamond": { "char": "♦", "description": "Diamond suit" },
+  "downArrow": { "char": "↓", "description": "Down arrow" },
+  "eightSpokedAsterisk": { "char": "✳", "description": "Eight-spoked asterisk" },
+  "exclamation": { "char": "❗", "description": "Exclamation mark" },
+  "female": { "char": "♀", "description": "Female sign" },
+  "fire": { "char": "🔥", "description": "Fire" },
+  "flower": { "char": "❀", "description": "Flower symbol" },
+  "gear": { "char": "⚙", "description": "Gear / Cogwheel" },
+  "heart": { "char": "♥", "description": "Heart suit" },
+  "infinity": { "char": "∞", "description": "Infinity" },
+  "lightning": { "char": "⚡", "description": "High voltage / Lightning bolt" },
+  "male": { "char": "♂", "description": "Male sign" },
+  "medicalCross": { "char": "✚", "description": "Medical cross" },
+  "moon": { "char": "☽", "description": "Moon (alternate crescent)" },
+  "musicalNote": { "char": "♪", "description": "Musical note" },
+  "peace": { "char": "☮", "description": "Peace symbol" },
+  "phone": { "char": "☎", "description": "Telephone" },
+  "plusMinus": { "char": "±", "description": "Plus-minus sign" },
+  "radiation": { "char": "☢", "description": "Radiation hazard" },
+  "recycling": { "char": "♻", "description": "Recycling symbol" },
+  "registered": { "char": "®", "description": "Registered sign" },
+  "scissors": { "char": "✂", "description": "Scissors" },
+  "skull": { "char": "☠", "description": "Skull and crossbones" },
+  "snowflake": { "char": "❄", "description": "Snowflake" },
+  "sparkle": { "char": "✨", "description": "Sparkles / Glint" },
+  "spade": { "char": "♠", "description": "Spade suit" },
+  "star": { "char": "☆", "description": "White star" },
+  "sun": { "char": "☀", "description": "Sun" },
+  "thermometer": { "char": "🌡", "description": "Thermometer" },
+  "tm": { "char": "™", "description": "Trademark" },
+  "umbrella": { "char": "☂", "description": "Umbrella" },
+  "upArrow": { "char": "↑", "description": "Up arrow" },
+  "warning": { "char": "⚠", "description": "Warning" },
+  "wheel": { "char": "☸", "description": "Wheel of Dharma (Dharmachakra)" },
+  "whiteCircle": { "char": "○", "description": "White circle" },
+  "yinYang": { "char": "☯", "description": "Yin Yang symbol" },
+  "zodiacAries": { "char": "♈", "description": "Zodiac sign Aries" },
+  "zodiacPisces": { "char": "♓", "description": "Zodiac sign Pisces" },
+
+  "approximatelyEqual": { "char": "≈", "description": "Approximately equal" },
+  "bishop": { "char": "♝", "description": "Bishop" },
   "blackDiamond": { "char": "◆", "description": "Black diamond" },
   "blackRightArrow": { "char": "➤", "description": "Black right arrow" },
   "blackSquare": { "char": "■", "description": "Black square" },
@@ -12,20 +61,15 @@
   "bulletPoint": { "char": "‣", "description": "Bullet point" },
   "check": { "char": "✔", "description": "Check mark" },
   "checkbox": { "char": "☑", "description": "Checkbox" },
-  "club": { "char": "♣", "description": "Club" },
   "copyright": { "char": "©", "description": "Copyright" },
-  "crescentMoon": { "char": "🌙", "description": "Crescent moon" },
-  "cross": { "char": "✖", "description": "Cross mark" },
   "cubeRoot": { "char": "∛", "description": "Cube root" },
   "curvedLeftArrow": { "char": "↩", "description": "Curved left arrow" },
   "curvedRightArrow": { "char": "↪", "description": "Curved right arrow" },
-  "diamond": { "char": "♦", "description": "Diamond" },
   "diamondBullet": { "char": "❥", "description": "Diamond bullet" },
   "division": { "char": "÷", "description": "Division sign" },
   "dollar": { "char": "$", "description": "Dollar" },
   "doubleLeftArrow": { "char": "⇐", "description": "Double left arrow" },
   "doubleRightArrow": { "char": "⇒", "description": "Double right arrow" },
-  "downArrow": { "char": "↓", "description": "Down arrow" },
   "emptyStar": { "char": "☆", "description": "Empty star" },
   "envelope": { "char": "✉", "description": "Envelope" },
   "equal": { "char": "=", "description": "Equal sign" },
@@ -33,10 +77,8 @@
   "filledStar": { "char": "★", "description": "Filled star" },
   "fourthRoot": { "char": "∜", "description": "Fourth root" },
   "greaterThanOrEqual": { "char": "≥", "description": "Greater than or equal" },
-  "heart": { "char": "♥", "description": "Heart" },
   "hourglass": { "char": "⌛", "description": "Hourglass" },
   "hourglassEmpty": { "char": "⏳", "description": "Hourglass empty" },
-  "infinity": { "char": "∞", "description": "Infinity" },
   "integral": { "char": "∫", "description": "Integral" },
   "king": { "char": "♚", "description": "King" },
   "knight": { "char": "♞", "description": "Knight" },
@@ -52,45 +94,33 @@
   "pawn": { "char": "♟", "description": "Pawn" },
   "pencil": { "char": "✏", "description": "Pencil" },
   "pi": { "char": "π", "description": "Pi" },
-  "plusMinus": { "char": "±", "description": "Plus minus" },
   "proportionalTo": { "char": "∝", "description": "Proportional to" },
   "queen": { "char": "♛", "description": "Queen" },
   "radioactive": { "char": "☢", "description": "Radioactive" },
   "rain": { "char": "🌧", "description": "Rain" },
   "recycle": { "char": "♻", "description": "Recycle" },
   "redCross": { "char": "❌", "description": "Red cross" },
-  "registered": { "char": "®", "description": "Registered" },
   "rightArrow": { "char": "→", "description": "Right arrow" },
   "rook": { "char": "♜", "description": "Rook" },
-  "scissors": { "char": "✂", "description": "Scissors" },
   "section": { "char": "§", "description": "Section" },
   "shootingStar": { "char": "🌠", "description": "Shooting star" },
   "skullAndCrossbones": { "char": "☠", "description": "Skull and crossbones" },
   "smallBlackStar": { "char": "✦", "description": "Small black star" },
   "smallCircle": { "char": "◦", "description": "Small circle" },
   "smallWhiteStar": { "char": "✧", "description": "Small white star" },
-  "snowflake": { "char": "❄", "description": "Snowflake" },
   "snowman": { "char": "☃", "description": "Snowman" },
-  "spade": { "char": "♠", "description": "Spade" },
   "sparkles": { "char": "✨", "description": "Sparkles" },
   "squareRoot": { "char": "√", "description": "Square root" },
-  "star": { "char": "★", "description": "Star (filled)" },
-  "sun": { "char": "☀", "description": "Sun" },
   "summation": { "char": "∑", "description": "Summation" },
   "telephone": { "char": "☎", "description": "Telephone" },
   "thinRightArrow": { "char": "➜", "description": "Thin right arrow" },
   "thunderstorm": { "char": "⛈", "description": "Thunderstorm" },
   "trademark": { "char": "™", "description": "Trademark" },
   "triangleBullet": { "char": "‣", "description": "Triangle bullet" },
-  "upArrow": { "char": "↑", "description": "Up arrow" },
   "upDownArrow": { "char": "↕", "description": "Up-down arrow" },
-  "umbrella": { "char": "☂", "description": "Umbrella" },
-  "warning": { "char": "⚠", "description": "Warning" },
-  "whiteCircle": { "char": "○", "description": "White circle" },
   "whiteDiamond": { "char": "◇", "description": "White diamond" },
   "whiteSquare": { "char": "□", "description": "White square" },
   "whiteTriangle": { "char": "△", "description": "White triangle" },
   "wideRightArrow": { "char": "➔", "description": "Wide right arrow" },
-  "yinYang": { "char": "☯", "description": "Yin yang" },
   "yen": { "char": "¥", "description": "Yen" }
 }
